--- a/styles/style.css
+++ b/styles/style.css
@@ -30,20 +30,50 @@ a {
 	text-align: center;
 }
 
+.navbar {
+	min-height: 80px;
+}
+
 .navbar-default {
 	background-color: #fff;
+}
+
+.navbar-nav {
+	margin-top: 15px;
+}
+
+.navbar img {
+	width: 50px;
+	height: 50px;
 }
 
 /* Navbar Title*/
 .navbar-default .navbar-brand {
 	color: #16A9E2;
 	font-weight: 500;
+	padding-bottom: 10px;
+	font-size: 30px;
+	font-weight: 200;
 }
 
 /* Navbar menus*/
 .navbar-default .navbar-nav>li>a {
 	color: #16A9E2;
-	font-weight: 500;
+	font-size: 15px;
+}
+
+/* Button in navbar */
+.navbar-default .navbar-nav>li>.btn {
+	margin-left: 10px;
+	color: #777;
+	background-color: #fff;
+	border-color: #888;
+}
+
+.navbar-default .navbar-nav>li>.btn:hover {
+	background-color: #F98D33;
+	color: #fff;
+	border-color: #F98D33;
 }
 
 .description {
