--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -29,19 +29,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/landing.anyfetch.com/"><img src="images/anyfetch.svg"/> AnyFetch</a>
+        <a class="navbar-brand" href="./"><img src="images/anyfetch.svg"/> AnyFetch</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="usecases.html" class="navbar-title">Use cases</a>
+          <li><a href="use-cases.html" class="navbar-title">Use cases</a>
           </li>
-          <li><a href="howitworks.html" class="navbar-title">How it works</a>
+          <li><a href="how-it-works.html" class="navbar-title">How it works</a>
           </li>
           <li><a href="developers.html" class="navbar-title">Developers</a>
           </li>
-          <li><a href="aboutus.html" class="navbar-title">About us</a>
+          <li><a href="about-us.html" class="navbar-title">About us</a>
           </li>
           <li><a href="contact.html" class="navbar-title">Pricing</a>
           </li>
@@ -62,10 +62,10 @@
       <div class="row">
         <div class="col-lg-12">
           <ul class="list-inline">
-            <li><a href="/">AnyFetch</a>
+            <li><a href="./">AnyFetch</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="usecases.html">Use cases</a>
+            <li><a href="use-cases.html">Use cases</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
             <li><a href="howitworks.html">How it works</a>
@@ -74,7 +74,7 @@
             <li><a href="developers.html">Developers</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="aboutus.html">About us</a>
+            <li><a href="about-us.html">About us</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
             <li><a href="contact.html">Contact</a>
