--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -88,6 +88,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/tools.js"></script>
+
 
 </body>
 
