--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,14 @@ a {
 	text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
+.partner-container {
+	text-align: center;
+}
+
+.partner-img {
+	height: 80px;
+}
+
 @media (max-width: 767px) {
 	.intro-message {
 		padding-bottom: 15%;
