--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -45,7 +45,7 @@
           </li>
           <li><a href="contact.html" class="navbar-title">Pricing</a>
           </li>
-          <li><a href="http://www.anyfetch.com/app.html" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
+          <li><a href="http://app.anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
           </li>
         </ul>
 
