--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -35,15 +35,15 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="use-cases.html" class="navbar-title">Use cases</a>
+          <li><a href="use-cases" class="navbar-title">Use cases</a>
           </li>
-          <li><a href="how-it-works.html" class="navbar-title">How it works</a>
+          <li><a href="how-it-works" class="navbar-title">How it works</a>
           </li>
-          <li><a href="developers.html" class="navbar-title">Developers</a>
+          <li><a href="developers" class="navbar-title">Developers</a>
           </li>
-          <li><a href="about-us.html" class="navbar-title">About us</a>
+          <li><a href="about-us" class="navbar-title">About us</a>
           </li>
-          <li><a href="contact.html" class="navbar-title">Pricing</a>
+          <li><a href="pricing" class="navbar-title">Pricing</a>
           </li>
           <li><a href="http://app.anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
           </li>
@@ -65,19 +65,19 @@
             <li><a href="./">AnyFetch</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="use-cases.html">Use cases</a>
+            <li><a href="use-cases">Use cases</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="howitworks.html">How it works</a>
+            <li><a href="howitworks">How it works</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="developers.html">Developers</a>
+            <li><a href="developers">Developers</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="about-us.html">About us</a>
+            <li><a href="about-us">About us</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="contact.html">Contact</a>
+            <li><a href="pricing">Pricing</a>
             </li>
           </ul>
           <p class="copyright text-muted small">&copy; AnyFetch 2014. All Rights Reserved</p>
