--- a/styles/style.css
+++ b/styles/style.css
@@ -140,9 +140,8 @@ a {
 }
 
 .intro-divider {
-	width: 400px;
-	border-top: 1px solid #f8f8f8;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+	width: 500px;
+	margin-left: 0px;
 }
 
 .intro-message > h3 {
@@ -160,6 +159,7 @@ a {
 @media (max-width: 767px) {
 	.intro-message {
 		padding-bottom: 15%;
+		text-align: center;
 	}
 
 	.intro-message > h1 {
