How it works + icons + about us

--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ a {
 	padding-bottom: 50px;
 	margin-top: 50px;
 	color: #f8f8f8;
-	background: url(../images/heron.png) no-repeat bottom right, url(../images/header.jpg) no-repeat center center;
+	background: url(../images/heron.png) no-repeat bottom right, url(../images/banner.svg) no-repeat center center;
 	background-size: 20%, cover;
 	text-align: center;
 	height: 400px;
@@ -394,4 +394,13 @@ a.list-group-item:hover {
 
 .inline-button {
 	margin-left: 20px;
+}
+
+.source-icon {
+	margin: 20px 5px 0px 5px;
+	height: 40px;
+}
+
+.contact {
+	text-align: center;
 }
