--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -43,7 +43,7 @@
           </li>
           <li><a href="about-us.html" class="navbar-title">About us</a>
           </li>
-          <li><a href="pricing.html" class="navbar-title">Pricing</a>
+          <li><a href="contact.html" class="navbar-title">Contact</a>
           </li>
           <li><a href="http://app.anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
           </li>
@@ -77,7 +77,7 @@
             <li><a href="about-us.html">About us</a>
             </li>
             <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="pricing.html">Pricing</a>
+            <li><a href="contact.html">Contact</a>
             </li>
           </ul>
           <p class="copyright text-muted small">&copy; AnyFetch 2014. All Rights Reserved</p>
