--- a/styles/style.css
+++ b/styles/style.css
@@ -325,6 +325,13 @@ p {
 	margin-bottom: 25px;
 }
 
+.jumbotron.team {
+	background:	url(../images/team.png) no-repeat center top;
+	background-size: cover;
+	height: 200px;
+	margin-top: 100px;
+}
+
 .jumbotron h1, .jumbotron .h1 {
 	font-size: 40px;
 }
