--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -73,26 +73,31 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <ul class="list-inline">
-            <li><a href="./">AnyFetch</a>
-            </li>
-            <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="use-cases.html">Use cases</a>
-            </li>
-            <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="howitworks.html">How it works</a>
-            </li>
-            <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="developers.html">Developers</a>
-            </li>
-            <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="about-us.html">About us</a>
-            </li>
-            <li class="footer-menu-divider">&sdot;</li>
-            <li><a href="contact.html">Contact</a>
-            </li>
+        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12">
+        <div class="col-sm-4">
+          <h5>Developers</h5>
+          <ul class="list-unstyled">
+            <li><a href="http://developers.anyfetch.com/" target="_blank">Home</a></li>
+            <li><a href="http://developers.anyfetch.com/endpoints/" target="_blank">Endpoints</a></li>
+            <li><a href="http://developers.anyfetch.com/guides/" target="_blank">Guides</a></li>
           </ul>
+        </div>
+        <div class="col-sm-4">
+          <h5>Solution</h5>
+          <ul class="list-unstyled">
+            <li><a href="/">AnyFetch</a></li>
+            <li><a href="/use-cases.html">Use Cases</a></li>
+            <li><a href="/how-it-works.html">How it works</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-4">
+          <h5>Company</h5>
+          <ul class="list-unstyled">
+            <li><a href="/about-us.html">About Us</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-12 text-center">
           <p class="copyright text-muted small">&copy; AnyFetch 2014. All Rights Reserved</p>
         </div>
       </div>
