Add Docs to menu

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -49,6 +49,7 @@
         {% else %}
           <li><a href="developers.html" class="navbar-title">Developers</a></li>
         {% endif %}
+          <li><a href="http://developers.anyfetch.com/" class="navbar-title" target="_blank">Docs</a></li>
         {% if page.path == "about-us.html" %}
           <li class="active"><a href="about-us.html" class="navbar-title">About us</a></li>
         {% else %}
