--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -55,11 +55,6 @@
         {% else %}
           <li><a href="about-us.html" class="navbar-title">About us</a></li>
         {% endif %}
-        {% if page.path == "contact.html" %}
-          <li class="active"><a href="contact.html" class="navbar-title">Contact</a></li>
-        {% else %}
-          <li><a href="contact.html" class="navbar-title">Contact</a></li>
-        {% endif %}
           <li><a href="http://app.anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Login</span></a></li>
         </ul>
 
@@ -95,7 +90,7 @@
           <h5>Company</h5>
           <ul class="list-unstyled">
             <li><a href="/about-us.html">About Us</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/about-us.html#contact">Contact</a></li>
           </ul>
         </div>
         <div class="col-sm-12 text-center">
