--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -91,6 +91,7 @@
           <ul class="list-unstyled">
             <li><a href="/about-us.html">About Us</a></li>
             <li><a href="/about-us.html#contact">Contact</a></li>
+            <li><a href="/press.html">Press</a></li>
           </ul>
         </div>
         <div class="col-sm-12 text-center">
