--- a/styles/style.css
+++ b/styles/style.css
@@ -329,11 +329,11 @@ p {
 	margin-bottom: 25px;
 }
 
-.jumbotron.team {
-	background:	url(../images/team.jpg) no-repeat center top;
-	background-size: cover;
-	height: 200px;
-	margin-top: 100px;
+.team {
+	max-width: 100%;
+	max-height: 250px;
+	border-radius: 6px;
+	margin-bottom: 50px;
 }
 
 .jumbotron h1, .jumbotron .h1 {
