--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -45,9 +45,9 @@
           <li><a href="how-it-works.html" class="navbar-title">How it works</a></li>
         {% endif %}
         {% if page.path == "developers.html" %}
-          <li class="active"><a href=".html" class="navbar-title">I.T.</a></li>
+          <li class="active"><a href=".html" class="navbar-title">IT</a></li>
         {% else %}
-          <li><a href="it.html" class="navbar-title">I.T.</a></li>
+          <li><a href="it.html" class="navbar-title">IT</a></li>
         {% endif %}
           <li><a href="http://developers.anyfetch.com/" class="navbar-title" target="_blank">Docs</a></li>
         {% if page.path == "about-us.html" %}
