fix IT menu active

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -44,7 +44,7 @@
         {% else %}
           <li><a href="how-it-works.html" class="navbar-title">How it works</a></li>
         {% endif %}
-        {% if page.path == "developers.html" %}
+        {% if page.path == "it.html" %}
           <li class="active"><a href=".html" class="navbar-title">IT</a></li>
         {% else %}
           <li><a href="it.html" class="navbar-title">IT</a></li>
