--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -73,7 +73,7 @@
         <div class="col-sm-4">
           <h5>Developers</h5>
           <ul class="list-unstyled">
-            <li><a href="http://developers.anyfetch.com/" target="_blank">Home</a></li>
+            <li><a href="http://developers.anyfetch.com/" target="_blank">Docs</a></li>
             <li><a href="http://developers.anyfetch.com/endpoints/" target="_blank">Endpoints</a></li>
             <li><a href="http://developers.anyfetch.com/guides/" target="_blank">Guides</a></li>
           </ul>
