--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -34,6 +34,11 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
         <ul class="nav navbar-nav">
+        {% if page.path == "index.html" %}
+          <li class="active"><a href="./" class="navbar-title">Home</a></li>
+        {% else %}
+          <li><a href="./" class="navbar-title">Home</a></li>
+        {% endif %}
         {% if page.path == "use-cases.html" %}
           <li class="active"><a href="use-cases.html" class="navbar-title">Use cases</a></li>
         {% else %}
