--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -54,7 +54,7 @@
         {% else %}
           <li><a href="it.html" class="navbar-title">IT</a></li>
         {% endif %}
-          <li><a href="http://developers.anyfetch.com/" class="navbar-title" target="_blank">Docs</a></li>
+          <li><a href="http://developers.anyfetch.com/" class="navbar-title" target="_blank">Developers</a></li>
         {% if page.path == "about-us.html" %}
           <li class="active"><a href="about-us.html" class="navbar-title">About us</a></li>
         {% else %}
