--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -60,7 +60,7 @@
         {% else %}
           <li><a href="about-us.html" class="navbar-title">About us</a></li>
         {% endif %}
-          <li><a href="http://app.anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Login</span></a></li>
+          <li><a href="get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></li>
         </ul>
 
       </div>
@@ -71,7 +71,7 @@
 
   {{ content }}
 
-  <footer>
+  <footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12">
@@ -96,7 +96,6 @@
           <ul class="list-unstyled">
             <li><a href="/about-us.html">About Us</a></li>
             <li><a href="/about-us.html#contact">Contact</a></li>
-            <li><a href="/press.html">Press</a></li>
           </ul>
         </div>
         <div class="col-sm-12 text-center">
