it --> entreprise + fixes everywhere

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -29,7 +29,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./"><img src="images/anyfetch.svg"/> Any<b>Fetch<b></a>
+        <a class="navbar-brand" href="./"><img src="images/anyfetch_icon.svg"/> Any<b>Fetch<b></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,9 +51,9 @@
           <li><a href="how-it-works.html" class="navbar-title">How it works</a></li>
         {% endif %}
         {% if page.path == "it.html" %}
-          <li class="active"><a href=".html" class="navbar-title">IT</a></li>
+          <li class="active"><a href="entreprise.html" class="navbar-title">Entreprise</a></li>
         {% else %}
-          <li><a href="it.html" class="navbar-title">IT</a></li>
+          <li><a href="entreprise.html" class="navbar-title">Entreprise</a></li>
         {% endif %}
           <li><a href="http://developers.anyfetch.com/" class="navbar-title" target="_blank">Developers</a></li>
         {% if page.path == "about-us.html" %}
