--- a/styles/style.css
+++ b/styles/style.css
@@ -222,7 +222,7 @@ a {
 
 .content-section-b {
 	color: #fff;
-	background-color: #349CC5;
+	background-color: #14A8E1;
 	border-top: 1px solid #e7e7e7;
 	border-bottom: 1px solid #e7e7e7;
 	padding: 50px 0;
@@ -288,6 +288,10 @@ a {
 
 	ul.banner-social-buttons > li:last-child {
 		margin-bottom: 0;
+	}
+
+	footer {
+		text-align: center;
 	}
 }
 
