links in use-cases + nag fix

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -50,7 +50,7 @@
         {% else %}
           <li><a href="how-it-works.html" class="navbar-title">How it works</a></li>
         {% endif %}
-        {% if page.path == "it.html" %}
+        {% if page.path == "entreprise.html" %}
           <li class="active"><a href="entreprise.html" class="navbar-title">Entreprise</a></li>
         {% else %}
           <li><a href="entreprise.html" class="navbar-title">Entreprise</a></li>
