--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+/* ---------------------------------------------------------------
+						Misc
+--------------------------------------------------------------- */
+
 body, html {
 	height: 100%;
 	width: 100%;
@@ -462,3 +466,8 @@ a.list-group-item:hover {
 .profile-link {
 	color: #000;
 }
+
+/* ---------------------------------------------------------------
+						Landing - Window animation
+--------------------------------------------------------------- */
+
