--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -75,7 +75,7 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-xs-4 col-sm-2 col-sm-offset-3">
 					<h5>Developers</h5>
 					<ul class="list-unstyled">
 						<li><a href="http://developers.anyfetch.com/" target="_blank">Docs</a></li>
@@ -83,7 +83,7 @@
 						<li><a href="http://developers.anyfetch.com/guides/" target="_blank">Guides</a></li>
 					</ul>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-xs-4 col-sm-2">
 					<h5>Solution</h5>
 					<ul class="list-unstyled">
 						<li><a href="/">AnyFetch</a></li>
@@ -91,7 +91,7 @@
 						<li><a href="/how-it-works.html">How it works</a></li>
 					</ul>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-xs-4col-sm-2">
 					<h5>Company</h5>
 					<ul class="list-unstyled">
 						<li><a href="/about-us.html">About Us</a></li>
