--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -50,10 +50,10 @@
 					{% else %}
 					<li><a href="how-it-works.html" class="navbar-title">How it works</a></li>
 					{% endif %}
-					{% if page.path == "entreprise.html" %}
-					<li class="active"><a href="entreprise.html" class="navbar-title">Entreprise</a></li>
+					{% if page.path == "enterprise.html" %}
+					<li class="active"><a href="enterprise.html" class="navbar-title">Enterprise</a></li>
 					{% else %}
-					<li><a href="entreprise.html" class="navbar-title">Entreprise</a></li>
+					<li><a href="enterprise.html" class="navbar-title">Enterprise</a></li>
 					{% endif %}
 					<li><a href="http://developers.anyfetch.com/" class="navbar-title" target="_blank">Developers</a></li>
 					{% if page.path == "about-us.html" %}
