--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -55,7 +55,11 @@
 					{% else %}
 					<li><a href="enterprise.html" class="navbar-title">Enterprise</a></li>
 					{% endif %}
-					<li><a href="http://developers.anyfetch.com/" class="navbar-title" target="_blank">Developers</a></li>
+					{% if page.path == "developers.html" %}
+					<li class="active"><a href="developers.html" class="navbar-title">Developers</a></li>
+					{% else %}
+					<li><a href="developers.html" class="navbar-title">Developers</a></li>
+					{% endif %}
 					{% if page.path == "about-us.html" %}
 					<li class="active"><a href="about-us.html" class="navbar-title">About us</a></li>
 					{% else %}
