New developers page bis

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -82,6 +82,7 @@
 				<div class="col-xs-4 col-sm-2 col-sm-offset-3">
 					<h5>Developers</h5>
 					<ul class="list-unstyled">
+						<li><a href="developers.html">Overview</a></li>
 						<li><a href="http://developers.anyfetch.com/" target="_blank">Docs</a></li>
 						<li><a href="http://developers.anyfetch.com/endpoints/" target="_blank">Endpoints</a></li>
 						<li><a href="http://developers.anyfetch.com/guides/" target="_blank">Guides</a></li>
