--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ a {
 .intro-message > h1 {
 	margin: 0;
 	font-size: 5em;
-	text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+	/*text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);*/
 }
 
 .intro-divider {
@@ -167,7 +167,7 @@ a {
 }
 
 .intro-message > h3 {
-	text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+	/*text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);*/
 }
 
 .partner-container {
