use ajax to send email

--- a/styles/style.css
+++ b/styles/style.css
@@ -471,6 +471,11 @@ a.list-group-item:hover {
 	color: #000;
 }
 
+.alert {
+	/*visibility: hidden;*/
+	display: none;
+}
+
 /* ---------------------------------------------------------------
 						Landing - Window animation
 --------------------------------------------------------------- */
