--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -94,6 +94,7 @@
 						<li><a href="/">AnyFetch</a></li>
 						<li><a href="/use-cases.html">Use Cases</a></li>
 						<li><a href="/how-it-works.html">How it works</a></li>
+						<li><a href="/enterprise.html">Enterprise</a></li>
 					</ul>
 				</div>
 				<div class="col-xs-4col-sm-2">
