--- a/styles/style.css
+++ b/styles/style.css
@@ -364,10 +364,9 @@ p {
 }
 
 .team {
-	max-width: 100%;
+	width: 100%;
 	max-height: 250px;
-	border-radius: 6px;
-	margin-bottom: 50px;
+	margin-top: 50px;
 }
 
 .jumbotron h1, .jumbotron .h1 {
@@ -423,7 +422,7 @@ a.list-group-item:hover {
 }
 
 .thumbnail-portrait {
-	padding: 20px;
+	padding: 15px;
 	text-align: center;
 }
 
