--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -102,6 +102,7 @@
 					<ul class="list-unstyled">
 						<li><a href="/about-us.html">About Us</a></li>
 						<li><a href="/about-us.html#contact">Contact</a></li>
+						<li><a href="https://twitter.com/anyFetch" target="_blank">Twitter</a></li>
 					</ul>
 				</div>
 			</div>
