--- a/styles/style.css
+++ b/styles/style.css
@@ -191,6 +191,8 @@ a {
 
 .partner-container {
 	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 
 .partner-img {
@@ -252,7 +254,7 @@ a {
 	background-color: #14A8E1;
 	border-top: 1px solid #e7e7e7;
 	border-bottom: 1px solid #e7e7e7;
-	padding: 50px 0;
+	padding: 30px 0;
 }
 
 .section-heading {
