--- a/templates/salesfetch/index.html
+++ b/templates/salesfetch/index.html
@@ -16,7 +16,7 @@
 		    <ul id="myTab" class="nav nav-tabs">
 		      <!-- <li class="active"><a href="#all" data-toggle="tab">All</a></li> -->
 		      <!-- <li class=""><a href="#profile" data-toggle="tab">Profile</a></li> -->
-		      <li class="dropdown">
+		      <li class="dropdown active">
 		        <a href="#" id="favorites" class="dropdown-toggle" data-toggle="dropdown">Favorites files <b class="caret"></b></a>
 		        <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
 		          <li><a href="#favorites-any" tabindex="-1" data-toggle="tab">Any types</a></li>
@@ -24,7 +24,7 @@
 		          <li><a href="#favorites-mails" tabindex="-1" data-toggle="tab">Mails</a></li>
 		        </ul>
 		      </li>
-		      <li class="dropdown active">
+		      <li class="dropdown">
 		        <a href="#" id="all" class="dropdown-toggle" data-toggle="dropdown">All files <b class="caret"></b></a>
 		        <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop2">
 		          <li><a href="#all-any" tabindex="-1" data-toggle="tab">Any types</a></li>
@@ -35,7 +35,7 @@
 		    </ul>
 		    <!-- Begin Tab -->
 		    <div id="myTabContent" class="tab-content">
-		      <div class="tab-pane fade active in" id="all-any">
+		      <div class="tab-pane fade" id="all-any">
 		      	<p>10 documents found</p>
 		        <div class="panel-group" id="accordion">
 				  <div class="panel panel-default">
@@ -211,7 +211,8 @@
 				</div>
 		      </div>
 		    <!-- End Tab -->
-		      <div class="tab-pane fade" id="favorites-any">
+		    <!-- Begin Tab -->
+		      <div class="tab-pane fade active in" id="favorites-any">
 		      	<p>2 favorites documents</p>
 				<div class="panel-group" id="accordion">
 				  <div class="panel panel-default">
@@ -250,6 +251,7 @@
 				  </div>
 				</div>
 		      </div>
+		    <!-- End Tab -->
 		      <div class="tab-pane fade" id="dropdown1">
 		        <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
 		      </div>
