--- a/templates/salesfetch/index.html
+++ b/templates/salesfetch/index.html
@@ -283,14 +283,14 @@
 			    <div class="modal-content">
 			      <div class="modal-header">
 			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+			        <h4 class="modal-title" id="myModalLabel">Viewer</h4>
 			      </div>
 			      <div class="modal-body">
-			        ...
+			        View your document here
 			      </div>
 			      <div class="modal-footer">
 			        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			        <button type="button" class="btn btn-primary">Save changes</button>
+			        <button type="button" class="btn btn-primary">Open in application</button>
 			      </div>
 			    </div>
 			  </div>
