--- a/styles/style.css
+++ b/styles/style.css
@@ -8,12 +8,16 @@ body, html {
 }
 
 body, h1, h2, h3, h4, h5, h6 {
-	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: 700;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
 }
 
 body {
 	text-align: justify;
+}
+
+strong {
+	font-weight: 600;
 }
 
 .content {
