--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -58,25 +58,50 @@
 					<li><a href="use-cases.html" class="navbar-title">Use cases</a></li>
 					{% endif %}
 					{% if page.path == "how-it-works.html" %}
-					<li class="active"><a href="how-it-works.html" class="navbar-title">How it works</a></li>
+					<li class="hidden-sm active"><a href="how-it-works.html" class="navbar-title">How it works</a></li>
 					{% else %}
-					<li><a href="how-it-works.html" class="navbar-title">How it works</a></li>
+					<li class="hidden-sm"><a href="how-it-works.html" class="navbar-title">How it works</a></li>
 					{% endif %}
 					{% if page.path == "enterprise.html" %}
-					<li class="active"><a href="enterprise.html" class="navbar-title">Enterprise</a></li>
+					<li class="visible-lg active"><a href="enterprise.html" class="navbar-title">Enterprise</a></li>
 					{% else %}
-					<li><a href="enterprise.html" class="navbar-title">Enterprise</a></li>
+					<li class="visible-lg"><a href="enterprise.html" class="navbar-title">Enterprise</a></li>
 					{% endif %}
 					{% if page.path == "developers.html" %}
-					<li class="active"><a href="developers.html" class="navbar-title">Developers</a></li>
+					<li class="visible-lg active"><a href="developers.html" class="navbar-title">Developers</a></li>
 					{% else %}
-					<li><a href="developers.html" class="navbar-title">Developers</a></li>
+					<li class="visible-lg"><a href="developers.html" class="navbar-title">Developers</a></li>
 					{% endif %}
 					{% if page.path == "about-us.html" %}
-					<li class="active"><a href="about-us.html" class="navbar-title">About us</a></li>
+					<li class="visible-lg active"><a href="about-us.html" class="navbar-title">About us</a></li>
 					{% else %}
-					<li><a href="about-us.html" class="navbar-title">About us</a></li>
+					<li class="visible-lg"><a href="about-us.html" class="navbar-title">About us</a></li>
 					{% endif %}
+					{% if page.path == "about-us.html" or page.path == "enterprise.html" or page.path == "developers.html" %}
+					<li class="visible-md dropdown active">
+					{% else %}
+					<li class="visible-md dropdown">
+					{% endif %}
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
+			          <ul class="dropdown-menu">
+			            <li><a href="/enterprise.html">Enterprise</a></li>
+			            <li><a href="/developers.html">Developers</a></li>
+			            <li><a href="/about-us.html">About us</a></li>
+			          </ul>
+			        </li>
+					{% if page.path == "about-us.html" or page.path == "enterprise.html" or page.path == "developers.html" or page.path == "how-it-works.html" %}
+					<li class="visible-sm dropdown active">
+					{% else %}
+					<li class="visible-sm dropdown">
+					{% endif %}
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
+			          <ul class="dropdown-menu">
+			            <li><a href="/how-it-works.html">How it works</a></li>
+			            <li><a href="/enterprise.html">Enterprise</a></li>
+			            <li><a href="/developers.html">Developers</a></li>
+			            <li><a href="/about-us.html">About us</a></li>
+			          </ul>
+			        </li>
 					<li><a href="get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></li>
 				</ul>
 
