--- a/styles/style.css
+++ b/styles/style.css
@@ -119,6 +119,17 @@ a {
 	border-color: #F98D33;
 }
 
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {
+	color: #fff;
+	background-color: #00A8E5;
+}
+
+.dropdown-menu>li>a {
+	color: #00A8E5;
+}
+
+
 .thumbnail {
 	color: #fff;
 	background-color: inherit;
