new action button position

--- a/templates/salesfetch/index.html
+++ b/templates/salesfetch/index.html
@@ -13,7 +13,8 @@
 <body>
 	<div class="bs-example bs-example-tabs">
 		<div class="header">
-			<h1><span class="glyphicon glyphicon-user"></span> John Smith</h1>
+			<h1>
+				<span class="glyphicon glyphicon-user"></span> John Smith</h1>
 			<!-- Single button -->
 			<div class="btn-group dropup action-button">
 				<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
