--- a/templates/salesfetch2/index.html
+++ b/templates/salesfetch2/index.html
@@ -263,7 +263,7 @@
 						</h2>
 					</div>
 					<div class="row">
-						<div class="col-sm-6 col-md-4">
+						<div class="col-sm-6 col-md-3">
 							<div class="thumbnail">
 								<img src="http://placehold.it/300x200" alt="...">
 								<div class="caption">
@@ -273,11 +273,21 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4">
+						<div class="col-sm-6 col-md-3">
 							<div class="thumbnail">
 								<img src="http://placehold.it/300x200" alt="...">
 								<div class="caption">
 									<h3>Gmail</h3>
+									<p>...</p>
+									<p><a href="#" class="btn btn-primary" role="button">Connect</a> <a href="#" class="btn btn-default" role="button">Info</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<div class="thumbnail">
+								<img src="http://placehold.it/300x200" alt="...">
+								<div class="caption">
+									<h3>Evernote</h3>
 									<p>...</p>
 									<p><a href="#" class="btn btn-primary" role="button">Connect</a> <a href="#" class="btn btn-default" role="button">Info</a></p>
 								</div>
