--- a/templates/salesfetch2/index.html
+++ b/templates/salesfetch2/index.html
@@ -298,6 +298,11 @@
 				</div>
 
 				<div class="tab-pane fade" id="search">
+					<div class="header">
+						<h2>
+							<span class="glyphicon glyphicon-search"></span> Cross account search
+						</h2>
+					</div>
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Any file, any message, anywhere">
 						<span class="input-group-btn">
