--- a/styles/style.css
+++ b/styles/style.css
@@ -522,24 +522,42 @@ a.list-group-item:hover {
 	box-shadow: 0px 0px 3px #777;
 }
 
-.window .top {
+.window .frames .frame img {
 	width: 100%;
 }
 
 /* Smartphone */
 
+.smartphone>img {
+	float: left;
+}
+
 .smartphone {
 	position: absolute;
 	bottom: 0;
+	top: 0;
 	right: 0px;
-	height: 250px;
+}
+
+.smartphone .frames .frame {
+	height: 100%;
+}
+
+.smartphone .frames {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+}
+
+.smartphone .frames .frame img {
+	height: 100%;
 }
 
 /* Animations */
 
 .frames {
-	background: white;
 	width: 100%;
+	height: 100%;
 	overflow: hidden;
 }
 
