--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -48,7 +48,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="./"><img src="images/anyfetch_icon.svg"/> Any<b>Fetch<b></a>
+				<a class="navbar-brand" href="./"><img src="images/anyfetch_icon.svg" alt="AnyFetch Icon" /> Any<b>Fetch</b></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
