--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="styles/style.css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet" type="text/css">
+  	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
