--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -160,5 +160,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/tools.js"></script>
+
+
+	<script type="text/javascript">
+		$('.carousel').carousel({
+			interval: 3000,
+			pause: "false"
+		})
+	</script>
 	</body>
 </html>
