--- a/styles/style.css
+++ b/styles/style.css
@@ -693,3 +693,9 @@ a.list-group-item:hover {
 	100% { opacity: 0; }
 }
 
+.carousel .item {-webkit-transition: opacity 1s; -moz-transition: opacity 1s; -ms-transition: opacity 1s; -o-transition: opacity 1s; transition: opacity 1s;}
+.carousel .active.left {left:0;opacity:0;z-index:2;}
+.carousel .next {left:0;opacity:1;z-index:1;}
+.carousel-indicators {
+	bottom: -40px;
+}
