--- a/styles/style.css
+++ b/styles/style.css
@@ -706,10 +706,22 @@ a.list-group-item:hover {
 }
 
 .carousel-indicators li {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	padding-top: 2px;
+	text-indent: 0px;
+	color: #00A7E4;
 	border-color: #00A7E4;
 }
 
 .carousel-indicators .active {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	padding-top: 2px;
+	text-indent: 0px;
+	color: #fff;
 	background-color: #00A7E4;
 }
 
